src/lib/xrm.h


typedef struct xrmCuStat {
    bool isBusy;
    int32_t usedLoad;    
    uint8_t extData[64]; 
} xrmCuStat;
typedef struct xrmCuProperty {
    char kernelName[XRM_MAX_NAME_LEN];  
    char kernelAlias[XRM_MAX_NAME_LEN]; 
    bool devExcl;                       
    int32_t requestLoad;                
    uint64_t poolId;                    
    uint8_t extData[64];                
} xrmCuProperty;
typedef struct xrmCuListProperty {
    xrmCuProperty cuProps[XRM_MAX_LIST_CU_NUM];
    int32_t cuNum; 
    bool sameDevice;
    uint8_t extData[64]; 
} xrmCuListProperty;
typedef struct xrmCuPoolProperty {
    xrmCuListProperty cuListProp;
    int32_t cuListNum; 
    uuid_t xclbinUuid;
    int32_t xclbinNum;   
    uint8_t extData[64]; 
} xrmCuPoolProperty;
typedef struct xrmUdfCuProperty {
    char cuName[XRM_MAX_NAME_LEN]; 
    bool devExcl;                  
    int32_t requestLoad;           
    uint8_t extData[64];           
} xrmUdfCuProperty;
typedef struct xrmUdfCuListProperty {
    xrmUdfCuProperty udfCuProps[XRM_MAX_LIST_CU_NUM];
    int32_t cuNum; 
    bool sameDevice;
    uint8_t extData[64]; 
} xrmUdfCuListProperty;
typedef struct xrmUdfCuGroupProperty {
    xrmUdfCuListProperty optionUdfCuListProps[XRM_MAX_UDF_CU_GROUP_OPTION_LIST_NUM];
    int32_t optionUdfCuListNum; 
    uint8_t extData[64];        
} xrmUdfCuGroupProperty;
typedef struct xrmCuGroupProperty {
    char udfCuGroupName[XRM_MAX_NAME_LEN]; 
    uint64_t poolId;                       
    uint8_t extData[64];                   
} xrmCuGroupProperty;
typedef enum xrmCuType {
    XRM_CU_NULL = 0,
    XRM_CU_IPKERNEL = 1,   
    XRM_CU_SOFTKERNEL = 2, 
} xrmCuType;
typedef struct xrmCuResource {
    char xclbinFileName[XRM_MAX_PATH_NAME_LEN];       
    char kernelPluginFileName[XRM_MAX_PATH_NAME_LEN]; 
    char kernelName[XRM_MAX_NAME_LEN];                
    char kernelAlias[XRM_MAX_NAME_LEN];               
    char instanceName[XRM_MAX_NAME_LEN];              
    char cuName[XRM_MAX_NAME_LEN];                    
    uuid_t uuid;
    int32_t deviceId;
    int32_t cuId;
    int32_t channelId;
    xrmCuType cuType;
    uint64_t baseAddr;        
    uint32_t membankId;       
    uint32_t membankType;     
    uint64_t membankSize;     
    uint64_t membankBaseAddr; 
    uint64_t allocServiceId;  
    int32_t channelLoad;      
    uint64_t poolId;          
    uint8_t extData[64];      
} xrmCuResource;
typedef struct xrmCuListResource {
    xrmCuResource cuResources[XRM_MAX_LIST_CU_NUM];
    int32_t cuNum;
    uint8_t extData[64]; 
} xrmCuListResource;
typedef struct xrmCuGroupResource {
    xrmCuResource cuResources[XRM_MAX_GROUP_CU_NUM];
    int32_t cuNum;
    uint8_t extData[64]; 
} xrmCuGroupResource;
typedef struct xrmCuPoolResource {
    xrmCuResource cuResources[XRM_MAX_POOL_CU_NUM];
    int32_t cuNum;
    uint8_t extData[64]; 
} xrmCuPoolResource;
typedef struct xrmAllocationQueryInfo {
    uint64_t allocServiceId;            
    char kernelName[XRM_MAX_NAME_LEN];  
    char kernelAlias[XRM_MAX_NAME_LEN]; 
    uint8_t extData[64];                
} xrmAllocationQueryInfo;
typedef struct xrmPluginFuncParam {
    char input[XRM_MAX_PLUGIN_FUNC_PARAM_LEN];
    char output[XRM_MAX_PLUGIN_FUNC_PARAM_LEN];
} xrmPluginFuncParam;
typedef void* xrmContext;
xrmContext xrmCreateContext(uint32_t xrmApiVersion);
int32_t xrmDestroyContext(xrmContext context);
bool xrmIsDaemonRunning(xrmContext context);
int32_t xrmLoadOneDevice(xrmContext context, int32_t deviceId, char* xclbinFileName);
int32_t xrmUnloadOneDevice(xrmContext context, int32_t deviceId);
int32_t xrmCuAlloc(xrmContext context, xrmCuProperty* cuProp, xrmCuResource* cuRes);
int32_t xrmCuListAlloc(xrmContext context, xrmCuListProperty* cuListProp, xrmCuListResource* cuListRes);
bool xrmCuRelease(xrmContext context, xrmCuResource* cuRes);
bool xrmCuListRelease(xrmContext context, xrmCuListResource* cuListRes);
int32_t xrmUdfCuGroupDeclare(xrmContext context, xrmUdfCuGroupProperty* udfCuGroupProp, char* udfCuGroupName);
int32_t xrmUdfCuGroupUndeclare(xrmContext context, char* udfCuGroupName);
int32_t xrmCuGroupAlloc(xrmContext context, xrmCuGroupProperty* cuGroupProp, xrmCuGroupResource* cuGroupRes);
bool xrmCuGroupRelease(xrmContext context, xrmCuGroupResource* cuGroupRes);
uint64_t xrmCuGetMaxCapacity(xrmContext context, xrmCuProperty* cuProp);
int32_t xrmCuCheckStatus(xrmContext context, xrmCuResource* cuRes, xrmCuStat* cuStat);
int32_t xrmAllocationQuery(xrmContext context, xrmAllocationQueryInfo* allocQuery, xrmCuListResource* cuListRes);
int32_t xrmCheckCuListAvailableNum(xrmContext context, xrmCuListProperty* cuListProp);
int32_t xrmCheckCuGroupAvailableNum(xrmContext context, xrmCuGroupProperty* cuGroupProp);
int32_t xrmCheckCuPoolAvailableNum(xrmContext context, xrmCuPoolProperty* cuPoolProp);
uint64_t xrmCuPoolReserve(xrmContext context, xrmCuPoolProperty* cuPoolProp);
bool xrmCuPoolRelinquish(xrmContext context, uint64_t poolId);
int32_t xrmReservationQuery(xrmContext context, uint64_t poolId, xrmCuPoolResource* cuPoolRes);
int32_t xrmExecPluginFunc(xrmContext context, char* xrmPluginName, uint32_t funcId, xrmPluginFuncParam* param);